--- a/app/views/careers/_form.html.erb
+++ b/app/views/careers/_form.html.erb
@@ -11,10 +11,10 @@
     </div>
   <% end %>
 
-<!--   <div class="field">
-    <%#= f.label :option %><br>
+  <div class="field">
+    <%= f.label :option %><br>
     <%= f.select :option, [["Graduate"], ["Undergraduate"], ["Specialist"], ["Doctoral"], ["Master"]]%>
-  </div> -->
+  </div>
 
 
   <div class="field">
