--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@ $light_grey: #F9F9FA;
 $grey: #f2f2f2;
 $dark_grey: #3c3c3c;
 $red: #11AFD3;
-$blue: #3FC1C9;
+$blue: #f95496;
 
 body {
 -webkit-font-smoothing: antialiased;
@@ -358,6 +358,9 @@ background-attachment: unset;
       margin: 0 15px;
       padding: 10px;
     }
+    a {
+        margin: 0 15px;
+      }
   }
   }
 
@@ -369,4 +372,35 @@ background-attachment: unset;
   a {
     color: $red;
   }
+}
+
+#cudrado {
+  
+  border: solid 2px $red;
+  padding: 10px 20px;
+  height: 270px;
+  margin-bottom: 20px;
+  h3 {
+    text-transform: uppercase;
+    font-size: 15px;
+    color: $blue;
+    font-weight: 900;
+  }
+
+.izq {
+    position: absolute;
+  }
+  .der {
+    display: inline;
+    float: right;
+  }
+
+}
+
+.center {
+  text-align: center;
+}
+
+.upper {
+  text-transform: uppercase;
 }
