--- a/app/views/universities/show.html.erb
+++ b/app/views/universities/show.html.erb
@@ -6,6 +6,7 @@
 </div>
 
 
+
 <div class="row">
 <div class="col-md-12">
   <div id="bread">
@@ -25,6 +26,9 @@
 
 <div class="row">
   <div class="col-md-3">
+  <div id="magic">
+    <%= render 'avatar' %>
+  </div>
     <div id="magic">
       <h4 class="titulo">U-finder Score</h4>
       <%= render 'unive_score' %>
