--- a/app/views/careers/index.html.erb
+++ b/app/views/careers/index.html.erb
@@ -24,6 +24,11 @@
 
 <div class="row">
 <div class="col-md-3">
+
+  <div id="magic">
+    <%= render '/universities/avatar' %>
+  </div>
+
   <div id="magic">
     <h4 class="titulo">U-finder Score</h4>
     <%= render 'universities/unive_score' %>
