--- a/app/views/universities/_form.html.erb
+++ b/app/views/universities/_form.html.erb
@@ -121,8 +121,9 @@
 
 
 
-
+<br>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "button button_red"%>
   </div>
+  <br>
 <% end %>
