--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,6 +112,26 @@ margin-bottom: 20px;
 
 }
 
+
+.button_blue {
+  color: white;
+  background-color: $blue;
+  height: 40px;
+  border: solid 1.2px white;
+  font-size: 18px;
+  &:hover {
+    color: $blue;
+    background-color: white;
+    border: solid 1.2px $blue;
+  }
+
+  &:hover > a {
+  color: white;
+  background-color: $blue;
+  }
+
+}
+
 .button_block {
   display: block;
   margin: 0 auto;
@@ -422,5 +442,51 @@ background-attachment: unset;
 #circle {
   .avatar {
   text-align: center;
+}
+}
+
+#formario {
+  margin: 2rem 0;
+  background-color: white;
+  box-shadow: 0 2px 2px 0 $red, 0 3px 1px -2px$red, 0 1px 5px 0 $red;
+  padding: 3rem 3rem 0;
+      border-radius: 11px;
+      border: solid 1px #e2e8ea;
+      -webkit-box-shadow: 6px 6px 2px rgba(46,133,155,0.04);
+      box-shadow: 6px 6px 2px rgba(46,133,155,0.04);
+
+h2, h1 {
+  text-align: center;
+  color: white;
+  width: 100%;
+  font-size: 100%;
+  font-weight: 900;
+  text-transform: uppercase;
+  background-color: $red;
+  padding: 20px 0;
+  a {
+    color: white;
+  }
+}
+
+input[type="date"],input[type="name"], input[type="email"], input[type="textbox"], input[type="number"], input[type="tel"], input[type="text"], input[type="password"], textarea, select {
+  width: 100%;
+  height: 3.5rem;
+  border:none;
+  border-bottom:1.3px solid #dadada;
+  margin-bottom: 1.5rem;
+  background-color: white !important;
+  }
+  textarea {
+    height: 20rem !important;
+  }
+  label {
+  margin-top: 1rem;
+  font-weight: 900;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #dadada;
+  font-family: 'Gotham_bold', sans-serif !important;
 }
 }
