--- a/app/views/careers/edit.html.erb
+++ b/app/views/careers/edit.html.erb
@@ -1,6 +1,13 @@
+<div class="container">
+<div class="col-md-8 col-md-offset-2">
+  <div id="formario">
+
 <h1>Editing Career</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', university_career_path(@university, @career) %> |
 <%= link_to 'Back', university_path(@university) %>
+
+
+</div></div></div>
