--- a/app/views/careers/index.html.erb
+++ b/app/views/careers/index.html.erb
@@ -61,6 +61,12 @@
 
   <div class="col-md-9">
     <div id="magic">
+
+<div class="row">
+  <div class="col-md-12">
+    <%= link_to "New Career", new_university_career_path(@university), class: "button button_blue button_block" %> <br><br>
+  </div>
+</div>    
       <div class="row">
         <% @careers.each do |career| %>
         <div class="col-md-4">
