--- a/app/views/universities/edit.html.erb
+++ b/app/views/universities/edit.html.erb
@@ -1,6 +1,11 @@
+<div class="container">
+<div class="col-md-8 col-md-offset-2">
+  <div id="formario">
+
 <h1>Editing University</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', universities_path(@university) %> |
-<%= link_to 'Back', universities_path %>
+</div>
+</div>
+</div>
