--- a/app/views/universities/new.html.erb
+++ b/app/views/universities/new.html.erb
@@ -1,5 +1,42 @@
+<div class="container">
+<div class="col-md-8 col-md-offset-2">
+  <div id="formario">
 <h1>New University</h1>
 
-<%= render 'form' %>
+<%= form_for [@university] do |f| %>
+  <% if @university.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@university.errors.count, "error") %> prohibited this university from being saved:</h2>
+
+      <ul>
+      <% @university.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+<div class="field">
+  <%= f.label :Country_id %><br>
+  <%= collection_select(:university, :country_id, Country.all, :id, :name, {:prompt => 'Select Country'}) %>
+</div>
+
+ <div class="field">
+   <%= f.label :name %><br>
+   <%= f.text_field :name %>
+ </div>
+
+
+
+
+
+
+
+  <div class="actions">
+    <%= f.submit class: "button button_red" %>
+  </div>
+<% end %>
 
 <%= link_to 'Back', universities_path %>
+
+</div></div></div>
