--- a/app/views/universities/_galle.html.erb
+++ b/app/views/universities/_galle.html.erb
@@ -34,7 +34,7 @@
 
 
   <!-- Trigger the modal with a button -->
-<button type="button" class="button button_red" data-toggle="modal" data-target="#PhotoModal">Add More photos <span class="fa fa-pencil"></span></button>
+<button type="button" class="botones button_red" data-toggle="modal" data-target="#PhotoModal">Add More photos <span class="fa fa-pencil"></span></button>
 
 <!--  -->
 </div>
