--- a/app/views/universities/_professorscore.html.erb
+++ b/app/views/universities/_professorscore.html.erb
@@ -59,6 +59,6 @@
 <span id="professor_reviews_count">(<%= @university.average_professor_score %>)</span></h5>
 
 <!-- Trigger the modal with a button -->
-<button type="button" class="botones button_red" data-toggle="modal" data-target="#ProfessormyModal">New Professor Score</button>
+<button type="button" class="vote" data-toggle="modal" data-target="#ProfessormyModal"><span class="fa fa-pencil"></span></button>
 
 <!--  -->
