--- a/app/views/universities/_academicscore.html.erb
+++ b/app/views/universities/_academicscore.html.erb
@@ -59,5 +59,7 @@
 
 
 <!-- Trigger the modal with a button -->
-<button type="button" class="botones button_red" data-toggle="modal" data-target="#AcademicmyModal">New Academic Score</button>
+
+
+<button type="button" class="vote" data-toggle="modal" data-target="#AcademicmyModal"><span class="fa fa-pencil"></span></button>
 <!--  -->
