--- a/app/views/universities/_alumniscore.html.erb
+++ b/app/views/universities/_alumniscore.html.erb
@@ -60,6 +60,7 @@
 
 
 <!-- Trigger the modal with a button -->
-<button type="button" class="botones button_red" data-toggle="modal" data-target="#AlumnimyModal">New Alumni Score</button>
+<button type="button" class="vote" data-toggle="modal" data-target="#AlumnimyModal"><span class="fa fa-pencil"></span></button>
+
 
 <!--  -->
