--- a/app/views/universities/_form.html.erb
+++ b/app/views/universities/_form.html.erb
@@ -13,7 +13,7 @@
 
 <div class="field">
   <%= f.label :Country_id %><br>
-  <%= collection_select(:university, :country_id, Country.all, :id, :name, {:prompt => 'Select Country'}) %>
+  <%= collection_select(:university, :country_id, Country.all, :id, :name, {:prompt => 'Select Country'}, required: true) %>
 </div>
 
 <!--   <div class="field">
@@ -26,12 +26,12 @@
   </div>
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, required: true %>
   </div>
 
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, required: true %>
   </div>
 
   <div class="field">
