--- a/app/views/universities/_infraestructurescore.html.erb
+++ b/app/views/universities/_infraestructurescore.html.erb
@@ -61,6 +61,8 @@
 
 
 <!-- Trigger the modal with a button -->
-<button type="button" class="botones button_red" data-toggle="modal" data-target="#InfraestructuremyModal">New Infraestructure Score</button>
+
+
+<button type="button" class="vote" data-toggle="modal" data-target="#InfraestructuremyModal"><span class="fa fa-pencil"></span></button>
 
 <!--  -->
