--- a/app/views/universities/_investmentscore.html.erb
+++ b/app/views/universities/_investmentscore.html.erb
@@ -59,6 +59,7 @@
 
 
 <!-- Trigger the modal with a button -->
-<button type="button" class="botones button_red" data-toggle="modal" data-target="#InvestmentmyModal">New Investment Score</button>
+
+<button type="button" class="vote" data-toggle="modal" data-target="#InvestmentmyModal"><span class="fa fa-pencil"></span></button>
 
 <!--  -->
