--- a/app/views/universities/_partyscore.html.erb
+++ b/app/views/universities/_partyscore.html.erb
@@ -60,5 +60,7 @@
 
 
 <!-- Trigger the modal with a button -->
-<button type="button" class="botones button_red" data-toggle="modal" data-target="#PartymyModal">New Party Life Score</button>
+
+
+<button type="button" class="vote" data-toggle="modal" data-target="#PartymyModal"><span class="fa fa-pencil"></span></button>
 <!--  -->
